api/swimos_form/src/tests/derive/form/unknown_field_attr.stderr
error: Unknown field attribute.
  --> src/tests/derive/form/unknown_field_attr.rs:20:16
   |
20 |         #[form(swim)]
   |                ^^^^
